tests/compile_failures/classes/list_values.stderr
error: lists are not supported
 --> tests/compile_failures/classes/list_values.rs:3:11
  |
3 | #[classes(list(42, "42"))]
  |           ^^^^^^^^^^^^^^
